# construction

./: CMakeLists.txt
src/: Parser.hpp  gitInteraction.cpp  gitInteraction.hpp  main.cpp
